[project]
name = "fastapi-user"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerich>=0.9.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.125.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "tortoise-orm>=0.25.2",
    "uvicorn>=0.38.0",
]
